frame/support/test/tests/pallet_ui/trait_constant_invalid_bound.stderr
error: Invalid usage of `#[pallet::constant]`, syntax must be `type $SomeIdent: Get<$SomeType>;`
 --> $DIR/trait_constant_invalid_bound.rs:9:3
  |
9 |         type U;
  |         ^^^^

error: expected `:`
 --> $DIR/trait_constant_invalid_bound.rs:9:9
  |
9 |         type U;
  |               ^
